memory-card-game-v2

--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Card Game</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- Bootstrap -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous"
-    /> -->
+    <!-- TailwindCSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Material icon -->
     <link
       rel="stylesheet"
@@ -26,11 +21,11 @@
     />
   </head>
   <body>
-    <div class="wrapper position-relative">
+    <div class="wrapper relative rounded-lg">
       <ul class="Cards">
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-1.png" alt="Card-img" />
@@ -38,15 +33,15 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-2.png" alt="Card-img" />
           </div>
         </li>
         <li class="Card">
-          <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+          <div class="view front-view ">
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-3.png" alt="Card-img" />
@@ -54,7 +49,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-4.png" alt="Card-img" />
@@ -62,7 +57,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-5.png" alt="Card-img" />
@@ -70,7 +65,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-6.png" alt="Card-img" />
@@ -78,7 +73,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-7.png" alt="Card-img" />
@@ -86,7 +81,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-8.png" alt="Card-img" />
@@ -94,7 +89,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-1.png" alt="Card-img" />
@@ -102,7 +97,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-2.png" alt="Card-img" />
@@ -110,7 +105,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-3.png" alt="Card-img" />
@@ -118,7 +113,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-4.png" alt="Card-img" />
@@ -126,7 +121,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-5.png" alt="Card-img" />
@@ -134,7 +129,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-6.png" alt="Card-img" />
@@ -142,7 +137,7 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-7.png" alt="Card-img" />
@@ -150,16 +145,18 @@
         </li>
         <li class="Card">
           <div class="view front-view">
-            <span class="material-symbols-outlined"> question_mark </span>
+            <span class="material-symbols-outlined text-4xl"> question_mark </span>
           </div>
           <div class="view back-view">
             <img src="images/img-8.png" alt="Card-img" />
           </div>
         </li>
       </ul>
-      <!-- <div id="winAlert" class="alert alert-success position-absolute h-100 w-100 start-50 translate-middle-x top-0 d-flex align-items-center justify-content-center d-none" role="alert align-items-center">
-        <h4 class="alert-heading text-center ">🎉 You Won!</h4>
-      </div> -->
+      <div class="winAlert absolute h-full w-full start-0 top-0 rounded-lg bg-green-700 flex flex-col items-center justify-center hidden gap-2 opacity-0 transition-opacity duration-700">
+        <h1 class="text-center text-white text-xl font-medium"><span class="text-4xl">🎉</span> YOU WON! <span class="text-4xl">🎉</span></h1>
+        <button onclick="shaffleCard()" class="rounded-full text-green-700 bg-white text-md px-3 py-1 mt-4 ">New Game</button>
+      </div>
+      
     </div>
   </body>
   <script src="script.js"></script>
