memory-card-game-v4

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           </div>
         </li>
       </ul>
-      <div class="winAlert absolute h-full w-full start-0 top-0 rounded-lg bg-green-700 flex flex-col items-center justify-center hidden gap-2 opacity-0 transition-opacity duration-700">
-        <h1 class="text-center text-white text-xl font-medium"><span class="text-4xl">🎉</span> YOU WON! <span class="text-4xl">🎉</span></h1>
-        <button onclick="shaffleCard()" class="rounded-full text-green-700 bg-white text-md px-3 py-1 mt-4 ">New Game</button>
+      <div class="winAlert absolute h-full w-full start-0 top-0 rounded-lg bg-amber-400 flex flex-col items-center justify-center hidden gap-2 opacity-0 transition-opacity duration-700">
+        <h1 class="text-center text-violet-800 text-3xl font-medium"><span class="text-5xl">🎉</span> YOU WON! <span class="text-5xl">🎉</span></h1>
+        <button onclick="shaffleCard()" class="rounded-full text-violet-600 bg-white text-xl px-3 py-1 mt-4 ">New Game</button>
       </div>
       
     </div>
